<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">JustJava</string>
    <string name="order">Submit Order</string>
    <string name="view">View</string>
    <string name="summary">Order Summary</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="name">Enter Your Name!</string>
    <string name="toastIncrement">Cannot order more than 100 cups!\'</string>
    <string name="orderSummary">Order Summary</string>
    <string name="toastDecrement">Cannot order less than 1 cup</string>
    <string name="nameOS">Name :\u0020<xliff:g id = "name" example = "Amy">%s</xliff:g></string>
    <string name="whipOS">Whipped Cream :</string>
    <string name="chocolateOS">Chocolate :</string>
    <string name="quantityOS">Quantity :\u0020</string>
    <string name="totalOS">Total :\u0020</string>
    <string name="thankyouOS">Thankyou!</string>
    <string name="toppingNo">\u0020No</string>
    <string name="toppingYes">\u0020Yes</string>
</resources>
