<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">
        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            />
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:layout_marginTop="24dp"
            android:paddingBottom="16dp"
            />
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/whippedCream"/>
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/chocolate"/>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:layout_marginRight="8dp"
                android:onClick="decrement"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:id="@+id/quantity_text_view"
                android:text="1"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:text="+"
                android:onClick="increment"
                />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/summary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView

            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_summary_text_view"
            android:text="\u20B90"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view"
            android:onClick="submitOrder"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:text="@string/order"
                android:onClick="mailOrder"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>